--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,8 +18,8 @@
           Want to know if people also think Cristiano Ronaldo is the best player in
           the world? Well, you are in the right place! View current and exciting soccer
           polls now, by clicking the 'View Polls' button below. Or if you want to make
-          a poll of your own, Login below and get creative!
-          Right poll was for predictions of the 2010 World Cup Winner
+          a poll of your own, Login and get creative!
+
         </p>
         <a href="{{ url_for('polllist') }}" class="button"> View Polls </a>
       </div>
