--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,7 +14,7 @@
 <div class="form-wrapper">
     <h2 class="login-header">Login Form</h2>
 
-    <form class="form" method="post" onsubmit="return validateForm(this)">
+    <form class="form" method="post" onsubmit="return validateForm5(this)">
         <div class="login-icon fa-3x">
             <i class="fas fa-users"></i>
         </div>
